# FormalLangTasks

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: CodeCoverage.cmake
include/: parser.h
src/parser-library/: CMakeLists.txt  parser.cpp
tests/parser/: unit.cpp
yaparser/: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
yaparser/include/: LRAutomata.h  LRGrammar.h  LRParser.h  LRState.h  LRUtil.h  Parser.h  util.h
yaparser/include/lr1/: LRGrammar.h  LRState.h  LRUtil.h
yaparser/src/parser-library/: CMakeLists.txt
yaparser/tests/parser/: CMakeLists.txt  unit.cpp
